[package]
name = "aim-trainer"
version = "0.1.0"
authors = ["Piotr Paturej, Michał Olejnik, Kacper Maj"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"